public/css/main.css
#main-menu {
    list-style-type: none;
    font-size: 22pt;
    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
    margin-left: 70px;
}

.navbar{
	width: 101%;
}
.menu-item-left {
    display: inline;
    margin: 20px
}

.menu-item-right {
    display: inline;
    margin-left:500px;
    margin-right: -450px
}

.menu-link {
    text-decoration: none;
    color: whitesmoke
}

.menu-link:hover {
    text-shadow: 1px 1px 2px whitesmoke;
}

.facebook-login {
	display: block;	
	vertical-align: middle;
	margin-top: 50%;
	margin: 0;
}

#logo {	
	display: block;
	width: 30%;
	float: right;
	border: 5px solid transparent;
	padding: 20px 25px 20px 25px;
	border-radius: 30px;
    margin-right: 1%;
    margin-top: -2%;
}

#logo:hover {	
	border: 5px solid #fa4778;
	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 10%, rgba(255,255,255,1) 46%, rgba(255,255,255,1) 59%, rgba(255,255,255,1) 100%);
	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 10%,rgba(255,255,255,1) 46%,rgba(255,255,255,1) 59%,rgba(255,255,255,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
}

/*body {
    background: url("../imgs/background.jpg");
	background-position: center fixed;
	max-width: 100vw;
	max-height: 100vh;
    background-size: 100%;
    background-repeat: repeat;
}*/

body { 
	width: 99%;
background-image: url("../imgs/background.jpg"); 
-webkit-background-size: cover;
-moz-background-size: 100%;
-o-background-size: cover;
background-size: 100%;
}

#btn-search{
    background: #2f2a33;
    color: white;
    border: 1px solid #2f2a33;
}

.jumbotron {
	background: -moz-linear-gradient(left, rgba(255,255,255,0.78) 0%, rgba(255,255,255,0.78) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
	background: -webkit-linear-gradient(left, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
	background: linear-gradient(to right, rgba(255,255,255,0.78) 0%,rgba(255,255,255,0.78) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7ffffff', endColorstr='#00ffffff',GradientType=1 );
}

.jumbotron:hover {
	background: -moz-linear-gradient(left, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 42%, rgba(255,255,255,0) 90%, rgba(255,255,255,0) 100%);
	background: -webkit-linear-gradient(left, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
	background: linear-gradient(to right, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 42%,rgba(255,255,255,0) 90%,rgba(255,255,255,0) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6ffffff', endColorstr='#00ffffff',GradientType=1 );
}

.toastr-possition{
	right: 3%;
	top: 8%;
}

.welcome-msg{
	color: white;
	text-align: center;
	font-size: 36pt;
	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
	background: rgba(0, 0, 0, .7);
	border: 1px solid black;
	border-radius: 3px;
	margin-top: 23%;
	margin-left: 20%;
	width: 80%;
}

.welcome-msg > p{
	font-size: 18pt;
}

